[tool.poetry]
name = "project3-1"
version = "0.1.0"
description = ""
authors = ["Marina Safina <safina531@gmail.com>"]
readme = "README.md"
packages = [{include = "project3"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
